source/assets/stylesheets/site/_site.scss
// ------------------------------------------------------------
// Layout
// ------------------------------------------------------------

// A simple, reusable mixin for applying
// to the top and bottom of an element.
@mixin section_padding($padding: 1em) {
  padding: $padding 0;
}

.site-header {
  position: relative;
	@include clearfix;
	background-color: $dark-blue;
}


// ------------------------------------------------------------
// Image hero-overflow
// ------------------------------------------------------------
.hero {
  $hero-color: white;
   background: url('../images/image-hero.png');
  background-repeat: no-repeat;
  background-position: top;
  background-size: cover;
  padding-bottom: 4em;
   height: 300px;
  @include media($medium-screen) {
    height: 450px;
  }


   i {
    
    margin-bottom: .3em;

  }

  .hero-inner {
    @include outer-container;
    @include clearfix;
    padding: 6em;
    margin: auto;
    text-align: center;
    color: $hero-color;

    .hero-copy {
      text-align: center;

      h1 {
        font-size: 1.1em;
        color: $white;
        font-family: $serif;
        margin: auto;
       
        font-weight: 400;
        line-height: 1.4em;

        @include media($medium-screen) {
			font-size: 3em;
			max-width: 60%;
        }
      }
    }
  }
}

#hero-overflow {
	overflow: hidden;
	image: cover;
	@include media($medium-screen) {
		height: 400px;
	}
	img {
		width: 100%;
		height: auto;
		@include media($medium-screen) {
			margin-top:-1%;  // positions viewable portion of the image
			display: block;
		}
	}
}

// ------------------------------------------------------------
// Main Section
// ------------------------------------------------------------
.blockcontent {
  @include outer-container;
  aside { 
  	@include media($large-screen) {
  	@include span-columns(3);
  	 }
  	}
  article {
    h1 {
      font-size: 1.3em;
      @include media($large-screen) { 
      font-size: 2em;
    }
    }
  @include media($large-screen) { 
  	@include span-columns(9); 
  }
}
}

.site-footer {
  @include section_padding(1em);
  border-top: 1px solid #eee;
}

// ------------------------------------------------------------
// Typography
// ------------------------------------------------------------

h1, h2, h3,
h4, h5, h6 {
  line-height: 1; // Set line-height smaller on larger fonts
}

// ------------------------------------------------------------
// Site Nav
// ------------------------------------------------------------

.site-nav {
	@include clearfix;

	.navbar-brand {
		display: block;
    line-height: 0;
    padding: 2em 0;
    float: left;
    line-height: 0;

    @include media($medium-screen) {
      padding: 2em;
		}

    i {
      font-size: 3em;
      line-height: 0;
      display: block;
      color: $white-smoke;
    }
	}

	.site-logo {
		display: block;
		border-radius: 100%;
		margin: auto;
	}

	.nav-links {
		height: 0;
		overflow: hidden;

		@include media($medium-screen) {
			height: auto;
		}

		a {
			@include trailing-hovers;
			@include media($medium-screen) {
				display: block;
				float: left;
				line-height: 0;
        font-weight: bold;
        color: $white-smoke;

        // I removed the top and bottom padding of the header
        // and fattened up the touch targets on these links.
        // Now they're easier to click.
				padding: 1.5em;

        &:hover {
          background: #002B36;
          color: #EFE8D5;
        }
			}
		}

		.nav-right {
			@include media($medium-screen) {
				float: right;
			}
		}
	}
}

// ------------------------------------------------------------
// Mobile Menu
// ------------------------------------------------------------

.mobile-menu {
	position: absolute;
	top: 2em;
	right: 1.5em;
	z-index: 2;

	@include media($medium-screen) {
		display: none;
	}

  i {
    font-size: 2em;
    line-height: 0;
    display: block;
    color: $white-smoke;
  }

	.icon {
		display: block;
		font-size: 2em;
		cursor: pointer;
	}
}

// Menu active
.menu-active {

	.nav-links {
		height: auto;
		overflow: auto;
    position: absolute;
    top: 100%;
    left: 0;
    right: 0;
    background: rgba(239,232,213,.95);
    box-shadow: 0 10px 10px rgba(0,43,54,.4);

		a {
			display: block;
			margin: 2em 0;
			text-align: center;
      color: #002B36;
		}
	}
}

// ------------------------------------------------------------
// Map From Refills
// ------------------------------------------------------------
.section-contact {
  color: #3f3f3f;
  font: 19px/29px 'RokkittRegular', Georgia, sans-serif;
  margin-bottom: 20px;
    h2  {
    font-size: 1.5em;
    @include media($medium-screen) {
      font-size: 1.7em;
  }
}
}
.section-menu {
  color: #3f3f3f;
  margin-bottom: 20px;
    h2  {
      font: 19px/29px 'RokkittRegular', Georgia, sans-serif;
    font-size: 1.5em;
    @include media($medium-screen) {
      font-size: 2.2em;
  }
}
}



#map_canvas {
  width: 100%;
  height: 200px;
  
  @include media($large-screen) {
    height: 400px;
  }
}

#map_canvas img { 
  max-width: none; 
// to prevent UI control bug
}

#map_canvas .content {
  padding: .7em .5em 1em .5em;
}

#map_canvas .firstHeading {
  font-family: $serif;
  font-size: 1.4em;
  margin-bottom: .4em;
}

#map_canvas .bodyContent p {
  font-family: $sans-serif;
  font-size: 1em;
  margin-bottom: 0;
}

#map_canvas .bodyContent p:last-of-type {
  border-top: 1px solid silver;
  margin-top: .5em;
  padding-top: .3em;
}

